HOLY FUCK I FIGURED OUT THIS RIDICULOUS BUG FINALLY. The text blocks were jumping by just a bit every time you open the map text component, and it took me forever to figure out that on init the getRectBounds of the boundary element im doing the view child with does not initially return the right value because the entire page has not been rendered therefore for a split second the size of the boundary is a bit smaller causing the origin of the text to change. of course once the page renders the correcty value is calcluated and the block was jumping to the right origin. I figured out that instead of calling boundingRect on the viewchild reference, I could just directly reference the element style width and it will initially be the correct value. its a bit hacky to cut off the px and type cast to a number, but considering this is a multi day bug finally solved (havent even been able to reimplement alignment since the refactor) it is for sure okay. Oward with hooking up text size again

--- a/frontend/src/app/components/map-text/map-text.component.scss
+++ b/frontend/src/app/components/map-text/map-text.component.scss
@@ -78,8 +78,10 @@
 // Drag Boundary & Items
 .text-boundary {
     position: relative;
-    width: 97.5%;
-    height: 95%;
+    // width: 97.5%;
+    // height: 95%;
+    width: 100%;
+    height: 100%;
     max-width: 100%;
     outline: dotted black 2px;
     // border: solid red 0px;
